1.2.1 - TBD
    * Added Acacia Stairs
    * Added Dark Oak Stairs

1.2.0 - 2013-12-30
    * Reduced Chunky binary size by removing some redundancies
    (Windows installer is now 3.8 megabytes, was 8.9)
    * Added new icons in the Render Controls dialog
    * Changed the title of the "HALT" button to "RESET"
    * Added stained glass panes
    * Pressing return in the scene name field now saves the scene
    * Added large flowers
    * Added new small flowers
    * Added new biome color data
    * Added Red Sand
    * Trapdoors connected to the top of a block now display correctly
    * Wood logs now use the new top/bottom textures
    * Added Packed Ice
    * Added Podzol
    * Added Acacia and Dark Oak logs/planks/saplings
    * Render snapshots are now not saved by default, but there is a new
    checkbox to enable the render snapshots in the Render Controls dialog.
    * It is now possible to set a custom dump frequency
    * Changed scene description format to JSON - not backward compatible with
    the old CVF format which was NBT based
    * Changed default scene directory name to "scenes" (lowercase initial)
    * Improved scene selector
    * Sunlight passing through colored translucent textures is now
    appropriately colored
    * Added stained glass block rendering
    * Highlight targeted blocks in the preview render mode
    * Added check box for showing launcher on startup under the Options tab
    * Tweaked the World Selector and Scene Selector dialogs

1.1.14 - 2013-09-15
    * Fixed problem reading NBT data generated by snapshot 13w36a (1.7)
    * Always read list length of NBT lists and allow empty lists to have
    TAG_End as element type
    * Added camera roll setting
    * Fixed gray wool having the same texture as light gray wool
	* Added minecraftDir option to Chunky config file

1.1.13d - 2013-07-24
    * Renamed the "Load Texture Pack" button to "Load Resource Pack"
    * Fixed cobblestone texture not loading correctly for Minecraft 1.6